changed footer colour

--- a/css/master.css
+++ b/css/master.css
@@ -226,7 +226,7 @@ myHeading{
 .footer{
   width: 100%;
   padding-left: 10px;
-  background-color: #222940;
+  background-color: #181b27;
   /*border: 1px solid black;*/
 }
 
